--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-	"manifest_version": 2,
-	"name": "__MSG_appName__",
-	"version": "1.0.16",
+	"manifest_version": 3,
+	"name": "DongDuong",
+	"version": "1.0.0",
 	"default_locale": "en",
-	"description": "__MSG_appDescription__",
+	"description": "Tự động mở màn hình chờ qua tab mới",
 	"author": "Igor Lino @ ControlExpert",
 	"icons": {
 		"16": "images/icon-16.png",
 		"128": "images/icon-128.png"
 	},
-	"homepage_url": "",
+	"homepage_url": "https://github.com/otyhu12/PhuongDongAutoWindow",
 	"background": {
 		"scripts": [
 			"scripts/background.js"
@@ -21,6 +21,7 @@
 		"tabs",
 		"storage"
 	],
+	"options_page": "options.html",
 	"options_ui": {
 		"page": "options.html",
 		"chrome_style": true,
@@ -44,8 +45,10 @@
 			"*://igorlino.github.io/*"
 		]
 	},
-	"web_accessible_resources": [
-		"images/icon-48.png",
-		"images/options-loader.gif"
-	]
+	
+	"web_accessible_resources":[{
+		"resources": ["images/icon-48.png",
+			"images/options-loader.gif"]
+	
+	  }]
 }
