--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,9 @@
 	},
 	"homepage_url": "https://github.com/otyhu12/PhuongDongAutoWindow",
 	"background": {
-		"scripts": [
+		"service_worker": 
 			"scripts/background.js"
-		]
+		
 	},
 	"permissions": [
 		"system.display",
@@ -23,16 +23,14 @@
 	],
 	"options_page": "options.html",
 	"options_ui": {
-		"page": "options.html",
+		
 		"chrome_style": true,
 		"open_in_tab": true
 	},
 	"content_scripts": [
 		{
-			"matches": [
-				"http://*/*",
-				"https://*/*"
-			],
+			"matches": ["http://*/*",
+				"https://*/*"],
 			"js": [
 				"scripts/contentscript.js"
 			],
@@ -48,7 +46,8 @@
 	
 	"web_accessible_resources":[{
 		"resources": ["images/icon-48.png",
-			"images/options-loader.gif"]
+			"images/options-loader.gif"],
+			"matches": ["<all_urls>"]
 	
 	  }]
 }
