--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 3,
-	"name": "DongDuong",
+	"name": "PhuongDongMutiWindown",
 	"version": "1.0.0",
 	"default_locale": "en",
 	"description": "Tự động mở màn hình chờ qua tab mới",
